Add OFFLINE_MODE to block outgoing network requests during rendering
When OFFLINE_MODE=1, Puppeteer intercepts and blocks all outgoing
requests (remote images, fonts, tracking pixels). Data URIs are still
allowed for inline content. Also includes bodyOnly support for both
endpoints.

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,12 @@ MAX_FILE_SIZE_MB=20
 # If an email renders taller than this, the screenshot will be clipped
 MAX_SCREENSHOT_HEIGHT=15000
 
+# Offline Mode
+# When set to 1, blocks all outgoing network requests during rendering
+# (remote images, fonts, tracking pixels, etc. will not be loaded)
+# 0 = off (default), 1 = on
+OFFLINE_MODE=0
+
 # Logging Configuration
 # Log level: error, warn, info, debug
 # - error: Only critical errors
